<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSquareOne"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/text_login"
        android:textColor="#fff"
        android:textSize="28sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/text_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="16"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/text_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/text_forgot_password"
        android:textColor="@android:color/white"/>


</LinearLayout>

