<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSquareOne"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/text_signup"
        android:textColor="#fff"
        android:textSize="28sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/text_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center"
            android:maxLength="16"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_referred_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_referred_by">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_referred_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxLength="16"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_signup_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="phone"
                android:maxLength="16"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/text_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="14"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>