<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorSquareOne" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorSquareTwo" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorSquareThree" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorSquareFour" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorSquareFive" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.083"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="170dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="397dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <View
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="@+id/gl_1" />


    <View
        android:id="@+id/divider_2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        app:layout_constraintTop_toTopOf="@id/gl_2" />


    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_one"
        app:layout_constraintBottom_toTopOf="@+id/gl_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_1">

        <ImageView
            android:id="@+id/iv_main_logo"
            android:src="@mipmap/ic_launcher"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:foregroundGravity="center_horizontal"/>

        <ImageButton
            android:id="@+id/ib_menu"
            android:layout_toRightOf="@+id/iv_main_logo"
            android:background="@drawable/ic_menu_80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBannerTwo"
        app:layout_constraintBottom_toTopOf="@id/gl_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_2">


        <TextView
            android:id="@+id/tv_knowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/banner_text_knowing"
            android:textColor="@android:color/white"
            android:translationX="-15dp" />

        <TextView
            android:id="@+id/tv_is_beautiful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_knowing"
            android:gravity="center_horizontal"
            android:text="@string/banner_text_beautiful"
            android:textColor="@android:color/white"
            android:translationX="60dp"
            android:translationY="-36dp" />

        <TextView
            android:id="@+id/tv_highfasion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_is_beautiful"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/banner_text_highfashion"
            android:translationY="-30dp" />


    </RelativeLayout>


    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/ll_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintBottom_toTopOf="@id/gl_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_2">

        <TextView
            android:id="@+id/tv_the"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:translationX="-12dp"
            android:gravity="center_vertical|end"
            android:textColor="@color/colorTextExclusive"
            android:text="THE" />

        <TextView
            android:id="@+id/tv_highlife"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:translationX="-12dp"
            android:textColor="@color/colorTextHighLife"
            android:text="@string/banner_text_highlife" />

        <TextView
            android:id="@+id/tv_is_exclusive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:translationX="-16dp"
            android:textColor="@color/colorTextExclusive"
            android:text="@string/banner_text_is_exclusive" />

    </android.support.v7.widget.LinearLayoutCompat>


    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#ffff"
            android:layout_centerInParent="true"
            android:text="Tuna Can Image placed here instead."/>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>